css z-index fixes for tooltips

--- a/assets/less/bootstrap/tooltip.less
+++ b/assets/less/bootstrap/tooltip.less
@@ -5,7 +5,7 @@
 
 // Base class
 .tooltip {
-  position: absolute;
+  position: fixed;
   z-index: @zindexTooltip;
   display: block;
   visibility: visible;
